<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#919191" >

            <TextView
                android:id="@+id/dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="3dp"
                android:text="@string/dish"
                android:textColor="#ffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/quantity"
                android:textColor="#ffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="3dp"
                android:text="@string/price"
                android:textColor="#ffff"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/dishText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="3dp"
                android:textColor="#f01e14"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="1"
                android:textColor="#f01e14"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/priceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="3dp"
                android:textColor="#f01e14"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#919191" >

            <TextView
                android:id="@+id/deliveryAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/delivery"
                android:textColor="#ffff"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp" >

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/addressEditText"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/postcodeEditText"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/addressEditText"
                android:hint="@string/postCode" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#919191" >

            <TextView
                android:id="@+id/paymentMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/paymentMethod"
                android:textColor="#ffff"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#ebebeb" >

            <Button
                android:id="@+id/addCardButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/roundgrey"
                android:clickable="true"
                android:text="@string/addCardButton"
                android:textColor="#ffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/storedCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/storedCard"
                android:textColor="#919191" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cardRelativeArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/cardTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:stretchColumns="1" >
            </TableLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:background="#ebebeb" >

            <Button
                android:id="@+id/purchaseButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/roundshapebtn"
                android:text="@string/purchaseButton"
                android:textColor="#ffff"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>